fix(rules): address review feedback for Avro compatibility suggestions
- Use List.copyOf for immutable suggestion lists in RuleViolation
- Omit null from TYPE_MISMATCH union example
- Declare CompatibilityFixSuggestion.tier enum in OpenAPI v2/v3

Fixes Apicurio#7874